--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -25,6 +25,13 @@
   }
 }
 
+.card {
+  border-radius:5px;
+  margin: 10px;
+  background-color: #fff;
+  min-width: 320px;
+}
+
 .top-header{
   position: relative;
   min-height: 350px;
