--- a/app/views/meetups/index.html.erb
+++ b/app/views/meetups/index.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper" style="background:#e6e9ec;">
+<div class="wrapper">
   <div class="top-header top-header-users">
     <div class="hero-headline">
       <h1> Find Groups and share knowledge with other learners </h1>
@@ -19,7 +19,7 @@
               </p>
             </div>
             <div class="card-bottom text-center">
-              <div class="actions meetup-members">
+              <div class="actions">
                 <a href="/meetups/<%=meetup.id%>/meetup_members" class="members">
                 <%= meetup.users.count %> Members</a>
                 <span><a href="/meetups/<%= meetup.id%>/meetup_posts" class="members">
