--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,30 +1,27 @@
-
-  <div class="top-header top-header-users">
-    <div class="hero-headline">
-      <h1>Find Like Minded Learners </h1>
-    </div>
-  </div>
-  <%= render partial: 'users/search_bar' %>
-<div class="all-users">
-  <div class ="container">
-    <div class="row">
-      <div class="">
-        <% @users.each do |user| %>
-        <div class="card">
-          <div class="col-md-3 col-sm-3 col-xs-12 text-center card">
-            <%= image_tag user.avatar.url(:thumb), :class => "user-avatar img-circle  "%>
-            <h4 class=""><%=link_to user.full_name, user_path(user) %></h4>
-            <p><%= user.industry.name if user.industry%></p>
-            <ul class="actions list-inline">
-              <li id="<%= user.id %>-follow-form" class="follow-form">
-                <%= render partial: 'follows/follow_form', locals: { user: user } if current_user %>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <%end%>
+<div class="wrapper">
+    <div class="top-header top-header-users">
+      <div class="hero-headline">
+        <h1>Find Like Minded Learners </h1>
       </div>
     </div>
-      <%= will_paginate @users %>
+    <%= render partial: 'users/search_bar' %>
+  <div class="all-users">
+    <div class ="row">
+        <div class="col-md-11 col-md-offset-1 col-sm-offset-0 text-center">
+          <% @users.each do |user| %>
+            <div class="col-md-3 col-xs-12 text-center card">
+              <%= image_tag user.avatar.url(:thumb), :class => "user-avatar img-circle  "%>
+              <h4 class=""><%=link_to user.full_name, user_path(user) %></h4>
+              <p><%= user.industry.name if user.industry%></p>
+              <ul class="actions list-inline">
+                <li id="<%= user.id %>-follow-form" class="follow-form">
+                  <%= render partial: 'follows/follow_form', locals: { user: user } if current_user %>
+                </li>
+              </ul>
+            </div>
+          <%end%>
+        </div>
+        <%= will_paginate @users %>
+    </div>
   </div>
 </div>
