style meetup post views

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -43,6 +43,14 @@ a:visited {
   color: none;
 }
 
+p {
+  display: block;
+  -webkit-margin-before: 1em;
+  -webkit-margin-after: 1em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+}
+
 .btn-primary, .btn-default, .btn-success {
   min-height: 40px;
   min-width: 100px;
