--- a/app/assets/stylesheets/user_post.css.scss
+++ b/app/assets/stylesheets/user_post.css.scss
@@ -15,9 +15,18 @@
   }
 }
 .posts-area {
+  margin-top:20px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #e5e4e2;
+
   .row {
     margin-right: 0px;
     margin-left:0px;
+  }
+
+  .post-body {
+    display:block;
+    overflow: auto;
   }
   .panel-default > .panel-heading {
     color: #C3BFBF;
@@ -29,12 +38,15 @@
     margin-top:5px;
     span {
       padding:4px;
-    }
-  }
+     }
+   }
+
 
   textarea.form-control {
     min-height:100px;
   }
+
+  .form-group {margin:10px;}
 
   .user-name {
     a{
@@ -51,13 +63,18 @@
   padding-top:0px;
   border:1px solid;
   margin-top:10px;
-  width:100%;
-  background-color:#fff;
+  background-color:#f6f7f8;
   border-color: #dddddd;
   color: #333333;
+  margin-bottom:20px;
+  overflow: auto;
 
   textarea.form-control {
     min-height:0px;
+  }
+
+  .comment-button {
+    margin-top:15px;
   }
 }
 
@@ -75,11 +92,7 @@
     margin-left:-4px;
   }
   .acomment {
-    /*border:1px solid #dddddd;
-    border-radius:5px;
-    margin-right:10px;
-    padding:5px;
-    margin-bottom:5px;*/
+    margin-top:10px;
   }
 }
 
