--- a/app/views/meetup_posts/_comments.html.erb
+++ b/app/views/meetup_posts/_comments.html.erb
@@ -7,19 +7,21 @@
           <div class="pull-left block commenter-image circle">
             <%=link_to (image_tag comment.user.avatar.url(:thumb), class: "img-circle ", size:'40x40'), user_path(comment.user) %>
           </div>
-          <span><%=link_to "#{comment.user.full_name}", user_path(comment.user), class: "row" %></span>
+          <div class="col-md-8 col-sm-12 col-xs-12">
+            <div class="user-name"><%=link_to "#{comment.user.full_name}", user_path(comment.user), class: "row" %></div>
+            <div class="time">
+               <%= timeago_tag post.created_at, :nojs => true, :limit => 30.days.ago %>
+            </div>
           </div>
+        </div>
           <% if comment.user == current_user %>
             <div class="col-md-2 col-sm-6 col-xs-12 text-center comment-actions">
               <%=link_to "", edit_meetup_comment_path(post.meetup, comment),remote: true, class: "fa fa-pencil fa-fw", title: "delete comment" %>
               <%=link_to "", meetup_comment_path(post.meetup, comment.id), remote: true,  method: :delete, data: {confirm: "Are you sure you want delete this comment?"}, class: "fa fa-trash error alert", title: "delete comment" %>
             </div>
           <%end%>
-          <div class="col-md-12 pull-left">
-             <div class="description row"><%= comment.description%></div>
-             <div class="time">
-                <%= timeago_tag post.created_at, :nojs => true, :limit => 30.days.ago %>
-             </div>
+          <div class="col-md-10 pull-left col-md-offset-1">
+             <div class="description"><%= comment.description%></div>
           </div>
         </div>
         <hr>
