Change meetups to groups

--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -82,13 +82,13 @@
   height:400px;
 }
 
-.course-meetup-menu{
+.course-group-menu{
   height:200px;
   margin-top:20px;
   padding:20px;
   background-color:#fff;
 }
-.course-meetup-suggestion {
+.course-group-suggestion {
   height:200px;
   margin-top:20px;
   padding:20px;
