--- a/app/views/meetup_members/_create_form.html.erb
+++ b/app/views/meetup_members/_create_form.html.erb
@@ -1,3 +1,3 @@
-<%= link_to(meetup_meetup_members_path(meetup.id, MeetupMember.new),remote: true,  method: :post) do %>
+<%= link_to(group_group_members_path(group.id, GroupMember.new),remote: true,  method: :post) do %>
   <span class="btn btn-default">join</span>
 <%end%>
