--- a/app/views/meetup_members/_destroy_form.html.erb
+++ b/app/views/meetup_members/_destroy_form.html.erb
@@ -1,3 +1,3 @@
-<%= link_to(meetup_meetup_member_path(meetup, MeetupMember.where(user_id: current_user, meetup_id: meetup).first.id), remote:true,  method: :delete) do %>
+<%= link_to(group_group_member_path(group, GroupMember.where(user_id: current_user, group_id: group).first.id), remote:true,  method: :delete) do %>
   <span class="btn btn-success">Joined</span>
 <%end%>
