--- a/app/views/meetup_members/index.html.erb
+++ b/app/views/meetup_members/index.html.erb
@@ -8,7 +8,7 @@
   <div class="all-users">
     <div class ="row">
         <div class="col-md-11 col-md-offset-1 col-sm-offset-0 text-center">
-          <%@meetup.members.each do |m| %>
+          <%@group.members.each do |m| %>
             <% user = m.user%>
             <div class="col-md-3 col-xs-12 text-center card">
               <%= image_tag user.avatar.url(:thumb), :class => "user-avatar img-circle  "%>
