change meetup and sub resources to groups

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,10 +1,10 @@
-div class="wrapper">
+<div class="wrapper">
   <div class="top-header top-header-users">
     <div class="hero-headline">
       <h1> Find Groups and share knowledge with other learners </h1>
     </div>
   </div>
-  <%= render partial: 'users/search_bar'%>
+  <%= render partial: 'users/search_bar' %>
   <div class="container">
     <div class ="study-groups-wrapper row">
       <div class="study-groups-section col-md-10 col-md-offset-1 text-center">
