--- a/app/views/group_members/index.html.erb
+++ b/app/views/group_members/index.html.erb
@@ -1,23 +1,28 @@
-<h1>Listing group_members</h1>
+<div class="wrapper">
+    <div class="top-header top-header-users">
+      <div class="hero-headline">
+        <h1>Find Like Minded Learners </h1>
+      </div>
+    </div>
+    <%= render partial: 'users/search_bar' %>
+  <div class="all-users">
+    <div class ="row">
+        <div class="col-md-11 col-md-offset-1 col-sm-offset-0 text-center">
+          <%@group.group_members.each do |m| %>
+            <% user = m.user%>
+            <div class="col-md-3 col-xs-12 text-center card">
+              <%= image_tag user.avatar.url(:thumb), :class => "user-avatar img-circle  "%>
+              <h4 class=""><%=link_to user.full_name, user_path(user) %></h4>
+              <p><%= user.industry.name if user.industry%></p>
+              <ul class="actions list-inline">
+                <li id="<%= user.id %>-follow-form" class="follow-form">
+                  <%= render partial: 'follows/follow_form', locals: { user: user } if current_user %>
+                </li>
+              </ul>
+            </div>
+          <%end%>
+        </div>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @group_members.each do |group_member| %>
-      <tr>
-        <td><%= link_to 'Show', group_member %></td>
-        <td><%= link_to 'Edit', edit_group_member_path(group_member) %></td>
-        <td><%= link_to 'Destroy', group_member, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Group member', new_group_member_path %>
+    </div>
+  </div>
+</div>
