--- a/app/views/group_posts/_group_posts.html.erb
+++ b/app/views/group_posts/_group_posts.html.erb
@@ -1,4 +1,4 @@
-<% group.group_posts.order(created_at: :desc).each do |post| %>
+ <% group.group_posts.order(created_at: :desc).each do |post| %>
   <div class="posts-area col-md-12" id="group-post-<%=post.id%>">
     <div class="post-wrapper ">
       <div class="post-header  row">
@@ -27,7 +27,7 @@
           <li class="col-md-3 col-sm-3 col-xs-6"><a class="add-comment" id="add-comment-<%= post.id %>" data-comment="<%= post.id %>"><i class="glyphicon glyphicon-plus-sign"></i> Comment </a></li>
           <li class="col-md-3 col-sm-3 col-xs-6" class="glyphicon glyphicon-comment">
           <a class="count-comments" id="count-comments-<%= post.id %>" data-comment="<%= post.id %>"><%= post.comments.count %> comments</a> </li>
-            <% if current_user && group.member?(current_user) && groupPostVote.where(user_id: current_user, group_post_id: post).present? %>
+            <% if current_user && group.member?(current_user) && GroupPostVote.where(user_id: current_user, group_post_id: post).present? %>
               <span id="upvote-btn-<%=post.id%>">
                 <%=link_to(group_group_post_group_post_vote_path(group,post.id, groupPostVote.where(user_id: current_user, group_post_id: post).first),remote: true, method: :delete) do %>
                   <i class="glyphicon glyphicon-thumbs-up"></i>
@@ -35,7 +35,7 @@
               </span>
             <%else%>
               <span id="upvote-btn-<%=post.id%>">
-                <%=link_to(group_group_post_group_post_votes_path(group,post.id, groupPostVote.new),remote: true, method: :post) do%>
+                <%=link_to(group_group_post_group_post_votes_path(group,post.id, GroupPostVote.new),remote: true, method: :post) do%>
                   <i class="glyphicon glyphicon-thumbs-up"></i>
                 <%end%>
               </span>
