--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row edit form">
-  <div class="meetup-header panel-heading row">
-    <%= bootstrap_form_for([meetup, comment], remote: true) do |f| %>
+  <div class="group-header panel-heading row">
+    <%= bootstrap_form_for([group, comment], remote: true) do |f| %>
       <% if comment.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
@@ -13,7 +13,7 @@
         </div>
       <% end %>
 
-    <%= f.text_area :description, label: { text: "Edit description"}, class: "meetup-body panel-body", contenteditable: true %>
+    <%= f.text_area :description, label: { text: "Edit description"}, class: "group-body panel-body", contenteditable: true %>
       <div class="actions">
         <%= f.submit "Done", class: "btn btn-success" %>
       </div>
