--- a/app/views/group_posts/_comments.html.erb
+++ b/app/views/group_posts/_comments.html.erb
@@ -16,8 +16,8 @@
         </div>
           <% if comment.user == current_user %>
             <div class="col-md-2 col-sm-6 col-xs-12 text-center comment-actions">
-              <%=link_to "", edit_meetup_comment_path(post.meetup, comment),remote: true, class: "fa fa-pencil fa-fw", title: "delete comment" %>
-              <%=link_to "", meetup_comment_path(post.meetup, comment.id), remote: true,  method: :delete, data: {confirm: "Are you sure you want delete this comment?"}, class: "fa fa-trash error alert", title: "delete comment" %>
+              <%=link_to "", edit_group_comment_path(post.group, comment),remote: true, class: "fa fa-pencil fa-fw", title: "delete comment" %>
+              <%=link_to "", group_comment_path(post.group, comment.id), remote: true,  method: :delete, data: {confirm: "Are you sure you want delete this comment?"}, class: "fa fa-trash error alert", title: "delete comment" %>
             </div>
           <%end%>
           <div class="col-md-10 pull-left col-md-offset-1">
