--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,24 +1,4 @@
-<!-- <div class="container">
-  <div class="row">
-    <div class"user-avatar"> avatar: <%= image_tag current_user.avatar.url(:thumb), :class => "img-circle"%></div>
-  </div>
-</div>
-    <section class="col-md-8 profile-info">
-      <div ="class user-info">
-        <p><%= current_user.full_name %></p>
-      </div>
-    </section>
-    <aside class="col-md-4 aside-info">
-      <p></p>
-    </aside>
-  </div>
 
-  <div class="row">
-    <div class=" col-md-8 about-info">
-      <p><%= current_user.about %></p>
-      <p><%= current_user.interests %></p>
-    </div>
-  </div>
+<% @user ||= current_user %>
 
-</div>
- -->
+<%= render partial: 'users/profile2' , locals: {user: @user}%>
