--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,63 +1,3 @@
-<div class="user-profile-wrapper">
-<div class="container-fluid user-cover">
-</div>
-<div class="container">
-    <div class="">
-      <% @user ||= current_user %>
-      <span ng-init="currentUser = <%= @user.id %>"></span>
-      <div class="row user-info-section">
-        <div class="user-info row">
-          <div class="main-profile text-center col-md-8">
-            <div class="user-basic-info">
-              <div class" col-md-3 col-sm-6 col-xs-12"><%= image_tag @user.avatar.url(:thumb), :class => "img-circle"%>
-              </div>
-              <h3 class="user-name"><%= @user.full_name %></h3>
-              <p><%= @user.industry.name if @user.industry%></p>
-            </div>
-            <div class="profile-actions">
-              <% if current_user != @user %>
-                <ul class="text-center"><li id="<%= @user.id %>-follow-form" class="follow-form" >
-                  <%= render partial: 'follows/follow_form', locals: { user: @user} %>
-                </li></ul>
-              <%end%>
-            </div>
-          </div>
-          <!-- Render aside user stats-->
-          <%= render partial: 'users/stats_right', locals: {user: @user}%>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 user-profile-info">
-        <div class="row projects item">
-          <%= @user.about %>
-        </div>
-        <%=render partial: "current_courses/view"%>
-        <%=render partial: "taken_courses/view"%>
-        <%=render partial: "future_courses/view"%>
-        <%=render partial: "educations/view"%>
-        <div class="row groups item">
-          <h3>User Groups</h3>
-          <%@user.groups.each do |group|%>
-            <p><%= group.name %></p>
-          <%end%>
-        </div>
-        <div class="row projects item">
-          <h3> Projects </h3>
-        </div>
+<% @user ||= current_user %>
 
-      </div>
-      <div class="col-md-4 col-sm-12 col-xs-12 text-center">
-        <div class="user-suggestions">
-          <p>Learners like you</p>
-        </div>
-        <div class="user-suggestions">
-          <p>Course groups</p>
-        </div>
-
-      </div>
-    </div>
-  </div>
-</div>
+<%= render partial: 'users/profile2' , locals: {user: @user}%>
